Changes 0.9.1 ->
* Reset TCP connection when non-diameter traffic is encountered.
* waitforConnection() was not working right.
* Moved session-id generation to Node
* Added credit-controle example
* Raw packets were not logged with log-level=FINEST
* AVP.setM() method added


Changes 0.9.0 -> 0.9.1
* Node.waitForConnection() and NodeManager.waitForConnection() added.
* AVP.vendor_id was not being reset on reused AVPs when calling decode()
* Made dk.i1.diameter.Messageheader constructors public
* With certain malformed origin-host-id values from peers the Node thread
  would encounter a NullPointerException because java.net.URI could not
  parse the URI.
* Potential race condition fix with sending messages to a peer after it
  was marked ready but before a CEA was sent.
* Faster detection of non-diameter traffic on sockets
* CER, DWR, DPR always had the hop-by-hop-identifier set to 0.